--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>登録 - ミニブログ</title>
+    <title>登録 - 座の人</title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -77,7 +77,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>ミニブログ</h1>
+            <h1>座の人</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">トップ</a></li>
@@ -105,7 +105,7 @@
             <p>アカウントをお持ちですか？ <a href="login.html">ログイン</a></p>
         </main>
         <footer>
-            <p>&copy; 2025 ミニブログ</p>
+            <p>© 2025 座の人</p>
         </footer>
     </div>
     <script>
