--- a/category_sports.html
+++ b/category_sports.html
@@ -6,23 +6,7 @@
     <title>スポーツ - 掲示板 - 座の人</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        body { display: flex; flex-direction: column; min-height: 100vh; }
-        div.container { flex: 1; display: flex; flex-direction: column; }
-        main#bulletinboard-main-container { display: flex; flex: 1; width: 100%; max-width: 960px; margin: 20px auto; gap: 20px; }
-        div#category-content { flex-grow: 1; background-color: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); display: flex; flex-direction: column; }
-        div#category-content h2 { margin-top: 0; margin-bottom: 15px; font-size: 1.5em; color: #333; }
-        ul#category-threads-list { list-style: none; padding: 0; margin: 0 0 20px 0; flex-grow: 1; }
-        ul#category-threads-list li { padding: 10px 5px; border-bottom: 1px solid #eee; }
-        ul#category-threads-list li:last-child { border-bottom: none; }
-        ul#category-threads-list li a { text-decoration: none; color: #007bff; font-size: 1.1em; }
-        ul#category-threads-list li a:hover { text-decoration: underline; }
-        ul#category-threads-list .thread-meta { font-size: 0.8em; color: #777; margin-top: 3px; }
-        .post-form { margin-top: 20px; padding: 15px; background-color: #f9f9f9; border-radius: 5px; }
-        .post-form h3 { margin-top: 0; margin-bottom: 10px; padding-bottom: 5px; border-bottom: 1px solid #eee; font-size: 1.3em; }
-        .post-form input[type="text"] { width: calc(100% - 92px); padding: 8px; margin-right: 10px; border: 1px solid #ccc; border-radius: 3px; box-sizing: border-box; }
-        .post-form button { padding: 8px 15px; background-color: #28a745; color: white; border: none; border-radius: 3px; cursor: pointer; width: 80px; }
-        .post-form button:hover { background-color: #218838; }
-        p.back-to-top-link { text-align: center; margin-top: 30px; padding-top: 20px; border-top: 1px solid #eee; }
+        /* このページのスタイルは style.css で管理します */
     </style>
 </head>
 <body>
